@@ -1067,10 +1067,12 @@ public final class MessagingService implements MessagingServiceMBean
         return ret;
     }
 
-    private static class SocketThread extends Thread
+    @VisibleForTesting
+    public static class SocketThread extends Thread
     {
         private final ServerSocket server;
-        private final Set<Closeable> connections = Sets.newConcurrentHashSet();
+        @VisibleForTesting
+        public final Set<Closeable> connections = Sets.newConcurrentHashSet();
 
         SocketThread(ServerSocket server, String name)
         {
@@ -1290,5 +1292,11 @@ public final class MessagingService implements MessagingServiceMBean
             throw new AssertionError(String.format("Partitioner in bounds serialization. Expected %s, was %s.",
                                                    globalPartitioner().getClass().getName(),
                                                    bounds.left.getPartitioner().getClass().getName()));
+    }
+
+    @VisibleForTesting
+    public List<SocketThread> getSocketThreads()
+    {
+        return socketThreads;
     }
 }
